--- a/street.html
+++ b/street.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link rel="stylesheet" href="assets/css/streetslider.css"/>
 <script src="assets/js/street-ism-2.2.min.js"></script>
-  <title>Mon Portfolio</title>
+  <title>NOM</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -32,11 +32,10 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Portfolio</a>
+      <a class="navbar-brand" href="index.html">NOM</a>
 	  <a  href="index.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
-	  </a>
-      </a>
+		</a>
     </div>
   </nav>
 
@@ -64,10 +63,10 @@
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="container">
-                <h3 class="h3">Instantanés Urbains</h3>
-                <p class="mb-4"><span class="text-muted">2018-2021</span></p>
+                <h3 class="h3">TITRE</h3>
+                <p class="mb-4"><span class="text-muted">2022</span></p>
                 <div class="mb-5">
-                  <p>Série d'images en paysage urbain nocturne montée sur plusieurs années.</p>
+                  <p>DESC</p>
 
                 </div>
               </div>
@@ -85,12 +84,12 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div class="credits">
-            Edo Wayan - 2022
+            Médias Interactifs - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="https://www.facebook.com/edo.wayan.142/"><span class="bi bi-facebook"></span></a>
-          <a href="https://instagram.com/edo_xcx"><span class="bi bi-instagram"></span></a>
+			<a href="mailto:mi.uqam2022@outlook.com"><span class="bi bi-envelope"></span></a>
+          <a href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a>
         </div>
       </div>
     </div>
@@ -102,7 +101,6 @@
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Template Main JS File -->
