--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ window.onload = function fadeOutEffect() {
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
 		<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -83,7 +83,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -92,7 +92,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -101,7 +101,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -110,7 +110,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -119,7 +119,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -128,7 +128,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -137,7 +137,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -146,7 +146,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -155,7 +155,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -164,7 +164,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -173,7 +173,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -182,7 +182,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -191,7 +191,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -200,7 +200,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -209,7 +209,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -218,7 +218,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -227,7 +227,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -236,7 +236,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -245,7 +245,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -254,7 +254,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -263,7 +263,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -272,7 +272,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">	
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -281,7 +281,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -290,7 +290,7 @@ window.onload = function fadeOutEffect() {
             </a>
           </div>
 			<div class="item interactif col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html" target="_blank" class="item-wrap fancybox">
+            <a href="./street.html"  class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Titre du projet</h3>
                 <span>Nom de l'artiste</span>
@@ -320,7 +320,8 @@ window.onload = function fadeOutEffect() {
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="https://instagram.com/edo_xcx"><span class="bi bi-instagram"></span></a>
+			<a href="mailto:mi.uqam2022@outlook.com"><span class="bi bi-envelope"></span></a>
+          <a href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a>
         </div>
       </div>
     </div>
@@ -332,7 +333,6 @@ window.onload = function fadeOutEffect() {
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
