--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mon Portfolio</title>
+  <title>Hysteresis</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -31,7 +31,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Portfolio</a>
+      <a class="navbar-brand" href="index.html">Hysteresis</a>
 		<a  href="index.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
 	  </a>
@@ -47,19 +47,19 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Edo Wayan</h2>
-            <a class="mb-0">Artiste Multidisciplinaire</a>
+            <h2>Mi22</h2>
+            <a class="mb-0">***********</a>
 			</div>
         </div>
      
 	  </div>
 		
 		<div class="container">
-		<p>Bonjour!</p>	
-			<p>Je m'appelle Edo et je vis depuis presque toujours à Montréal. Après un DEC <br> en Cinéma au Cégep Saint-Laurent et une session de congé bien merité, j'étudie <br> présentement en Médias Intéractifs à l'Université du Québec à Montréal.</p>
-			<p>Je me spécialise en vidéo, domaine que j'ai privilegié après plusieurs années <br> de photographie. Tout de même, mon interêt pour l'informatique date d'une autre décénnie; ce <br> qui m'a entraîné à considerer le design web. D'ailleurs, j'ai codé et designé ce portfolio!</p>
-			<p>Au final, l'intéractivité entre l'informatique et l'art sous toutes ses formes est ce qui me captive. Ce qui explique mon domaine d'étude actuel! <a href="https://lain2077.github.io/elc" target="_blank" style="text-decoration: underline">Earth's Last Computer</a>, crée dans le cadre d'Art Contexte 2022, est d'ailleurs l'oeuvre qui ma suscité le plus de plaisir à conceptualiser.</p>
-			<p>Pour toute idée de projet, collaboration, offre d'emploi ou questions, mon email: <a href="mailto:edowayan@hotmail.com" style="text-decoration: underline">edowayan@hotmail.com</a>. Me contacter sur <a href="https://instagram.com/edo_xcx/" target="_blank" style="text-decoration: underline">instagram</a> est une autre option.</p>
+		<p>AAAAAAAAAAAAAAAAAAA</p>	
+			<p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA <br> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+			<p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br> aaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+			<p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAArAAAAAAAAAAAAAAAAAA</p>
+			
 		</div>
                 
     </section><!-- End  Works Section -->
