--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>P</title>
+  <title>Hystérésis</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,19 +47,22 @@ window.onload = function fadeOutEffect() {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html" style="font-family: Remboy; font-size: 40px; font-weight: bold;">Hysteresis</a>
+      <a class="navbar-brand" href="index.html" style="font-family: Remboy; font-size: 40px; font-weight: bold;">HYSTERESIS</a>
+		<div class="container">
+	<h2 style="font-size: 18px;">Sous-titre</h2>
         <span></span>
-      </a>
+	  <br>
+    </div>
 	  <br>
     </div>
   </nav>
 
   <main id="main">
   
-<div id="loading">
+<!--<div id="loading">
   <img id="loading-image" src="assets/img/loader.svg" alt="Loading..." />
   <p class="mb-0">Loading ૮꒰ ˶• ༝ •˶꒱ა ♡</p>
-</div>
+        </div> -->
 
 
     <!-- ======= Works Section ======= -->
@@ -66,16 +70,15 @@ window.onload = function fadeOutEffect() {
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-			  <h2>Meow</h2>
 			  <a class="mb-0" style="font-size: 20px; color: white; border-style: dotted; border-color: white; " href="about.html">Infos</a>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
 			  <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">Tout</a>
-			  <a href="#" data-filter=".interactif">Interactif</a>
-              <a href="#" data-filter=".video">Video</a>
-			  <a href="#" data-filter=".photo">Photo</a>
-              <a href="#" data-filter=".autre">Autre</a>
+			  <a href="#" data-filter=".interactif">Theme1</a>
+              <a href="#" data-filter=".video">Theme2</a>
+			  <a href="#" data-filter=".photo">Theme3</a>
+              <a href="#" data-filter=".autre">Theme4/Autre</a>
             </div>
           </div>
         </div>
