--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Hysteresis</a>
-		<a  href="index.html" style="height: 50px; margin-right:10px">
+      <a class="navbar-brand" href="iframe.html">Hysteresis</a>
+		<a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
 	  </a>
     </div>
