--- a/slidertry.html
+++ b/slidertry.html
@@ -5,6 +5,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link rel="stylesheet" href="assets/css/slider-pro.min.css"/>
 <link rel="stylesheet" href="assets/css/streetslider.css"/>
 <script src="assets/js/street-ism-2.2.min.js"></script>
   <title>NOM</title>
@@ -30,11 +31,22 @@
 
 <body>
 
+  <script src="assets/libs/jquery-1.11.0.min.js"></script>
+<script src="assets/js/jquery.sliderPro.min.js"></script>
+
+<script type="text/javascript">
+	jQuery( document ).ready(function( $ ) {
+		$( '#my-slider' ).sliderPro();
+	});
+</script>
+
+
+
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">NOM</a>
-	  <a  href="index.html" style="height: 50px; margin-right:10px">
+      <a class="navbar-brand" href="ARTISTE INSTAGRAM"">NOM</a>
+	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
 		</a>
     </div>
@@ -60,24 +72,58 @@
 
     <section class="section">
 
-      <div class="site-section pb-0" style="pointer-events: none;">
-        <div class="container" style="pointer-events: none;">
-          <div class="row align-items-stretch" style="pointer-events: none;">
-            <div class="col-md-8" style="pointer-events: none;" data-aos="fade-up">
-          <div class="ism-slider" style="margin-bottom: 20px;" data-radios="false" id="streetslider">
-  <ol>
-    <li>
-      <img data-enlargeable style="pointer-events: all;" src="assets/img/photo/street/1.JPG">
-    </li>
-    <li>
-      <img src="assets/img/photo/street/2.jpg">
-    </li>
-    <li>
-      <img src="assets/img/photo/street/3.jpg">
-    </li>
-  </ol>
-</div>
-<div id="fullpage" onclick="this.style.display='none';"></div>
+      <div class="site-section pb-0">
+        <div class="container">
+          <div class="row align-items-stretch">
+            <div class="col-md-8" data-aos="fade-up">
+              <div class="slider-pro" id="my-slider">
+                <div class="sp-slides">
+                  <!-- Slide 1 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/1.JPG"/>
+                  </div>
+                  
+                  <!-- Slide 2 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/2.JPG"/>
+                  </div>
+                  
+                  <!-- Slide 3 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/3.JPG"/>
+                  </div>
+
+                  <!-- Slide 3 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/3.JPG"/>
+                  </div>
+
+                  <!-- Slide 3 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/3.JPG"/>
+                  </div>
+
+                  <!-- Slide 3 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/3.JPG"/>
+                  </div>
+
+                  <!-- Slide 3 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/3.JPG"/>
+                  </div>
+
+                  <!-- Slide 3 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/3.JPG"/>
+                  </div>
+
+                  <!-- Slide 3 -->
+                  <div class="sp-slide">
+                    <img onclick="FullSkreen()" class="sp-image" src="assets/img/photo/street/3.JPG"/>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="container">
@@ -127,6 +173,25 @@
   <audio loop="" autoplay="">
     <source src="assets/sounds/skype.mp3" type="audio/ogg">
   </audio>
+
+  <script>
+    $( '#my-slider' ).sliderPro({
+    width: 900,
+    height: 600,
+    imageScaleMode: 'contain',
+    fullScreen: true,
+    thumbnailArrows: true,
+    arrows: true,
+    fadeArrows: false,
+    buttons: false,
+  });
+    </script>
+
+<script>
+function FullSkreen(){
+    jQuery( '.sp-full-screen-button' ).trigger( 'click' );
+};
+</script>
 
 </body>
 
