Fixed fonts and some titles

--- a/street.html
+++ b/street.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/css/slider-pro.min.css"/>
 <link rel="stylesheet" href="assets/css/streetslider.css"/>
 <script src="assets/js/street-ism-2.2.min.js"></script>
-  <title>NOM</title>
+  <title>NOM ARTISTE</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
   <!-- ======= Navbar ======= -->
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" target="_blank" href="https://instagram.com/"">NOM</a>
+      <a  class="navbar-brand" target="_blank" href="https://instagram.com/"">NOM DE L'ARTISTE</a>
 	  <a  href="iframe.html" style="height: 50px; margin-right:10px">
 	  <i class="bi bi-house" style="font-size: 2rem; position: relative;"></i>
 		</a>
@@ -131,9 +131,9 @@
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="container">
                 <h3 class="h3">TITRE</h3>
-                <p class="mb-4"><span class="text-muted">2022</span></p>
+                <p class="mb-4"><span class="text-muted">2022 (?)</span></p>
                 <div class="mb-5">
-                  <p>DESC</p>
+                  <p>Texte accompagnateur</p>
 
                 </div>
               </div>
