--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Test</title>
+        <title>Hystérésis</title>
         <link rel="stylesheet" href="assets/css/style.css">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <style type="text/css">
