--- a/about.html
+++ b/about.html
@@ -66,59 +66,7 @@
 
     <!-- Wrapper for slides -->
 
-    <section class="section services" style="padding: 3rem;">
-      <div class="container">
-        <div class="row justify-content-center text-center mb-4">
-          <div class="col-5">
-            <h3 class="h3 heading">Expériences et compétences</h3>
-            <p></p>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <i class="bi bi-camera"></i>
-            <h4 class="h4 mb-2">Photo</h4>
-            <p>DSLR et Argentique</p>
-            <ul class="list-unstyled list-line">
-              <li>2018 - Photographe du bal des finissants de l'Académie de Roberval</li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
-		  <div class="col-12 col-sm-6 col-md-6 col-lg-1">
-		  </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <i class="bi bi-film"></i>
-            <h4 class="h4 mb-2">Video</h4>
-            <p>Réalisation, Scénarisation, Direction Photo, Montage</p>
-            <ul class="list-unstyled list-line">
-              <li>2018 - Contrat pour Virgin Media</li>
-              <li>2019 - Réalisation de Cours Toujours</li>
-              <li>2019 - Contrat de montage pour l'Académie de Roberval</li>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
-		  <div class="col-12 col-sm-6 col-md-6 col-lg-1">
-		  </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <i class="bi bi-laptop"></i>
-            <h4 class="h4 mb-2">Informatique</h4>
-            <p>Langages et Logiciels</p>
-            <ul class="list-unstyled list-line">
-              <li>Maitrise d'Adobe Premiere Pro, Photoshop et Lightroom</li>
-              <li>FL Studio (Bases)</li>
-              <li>Frontend Web (HTML/CSS)</li>
-              <li>2022 - Réalisation de ELC</li>
-              <li></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Services Section -->
+    <!-- End Services Section -->
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -128,7 +76,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div class="credits">
-            Edo Wayan - 2022
+            Médias Intéractifs (UQÀM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
