--- a/iframe.html
+++ b/iframe.html
@@ -326,7 +326,7 @@ window.onload = function fadeOutEffect() {
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div class="credits">
-            Médias Intéractifs - 2022
+            Médias Intéractifs (UQÀM) - 2022
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
