Last fix 4 the day ish

--- a/iframe.html
+++ b/iframe.html
@@ -47,9 +47,9 @@ window.onload = function fadeOutEffect() {
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html" style="font-family: Remboy; font-size: 40px; font-weight: bold;">HYSTERESIS</a>
+      <a class="navbar-brand" href="iframe.html" style="font-family: Remboy; font-size: 40px; font-weight: bold;">HYSTERESIS</a>
 		<div class="container">
-	<h2 style="font-size: 18px;">Sous-titre</h2>
+	<h2 style="font-size: 13px;">Sous-titre</h2>
         <span></span>
 	  <br>
     </div>
@@ -70,7 +70,7 @@ window.onload = function fadeOutEffect() {
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-			  <a class="mb-0" style="font-size: 20px; color: white; border-style: dotted; border-color: white; " href="about.html">Infos</a>
+			  <a class="mb-0" style="font-weight: bold; font-size: 20px; color: white; border-style: dotted; border-color: white; " href="about.html">Infos</a>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
 			  <div id="filters" class="filters">
