--- a/about.html
+++ b/about.html
@@ -80,8 +80,8 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="https://www.facebook.com/edo.wayan.142/"><span class="bi bi-facebook"></span></a>
-          <a href="https://instagram.com/edo_xcx"><span class="bi bi-instagram"></span></a>
+          <a target="_blank" href="mailto:mi.uqam2022@outlook.com"><span class="bi bi-enveloppe"></span></a>
+          <a target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a>
         </div>
       </div>
     </div>
