--- a/iframe.html
+++ b/iframe.html
@@ -330,8 +330,8 @@ window.onload = function fadeOutEffect() {
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-			<a href="mailto:mi.uqam2022@outlook.com"><span class="bi bi-envelope"></span></a>
-          <a href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a>
+			<a target="_blank" href="mailto:mi.uqam2022@outlook.com"><span class="bi bi-envelope"></span></a>
+          <a target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a>
         </div>
       </div>
     </div>
