--- a/street.html
+++ b/street.html
@@ -33,6 +33,8 @@
 
 <body>
 
+  <div id="bg" class="bg-image"></div>
+
   <script src="assets/libs/jquery-1.11.0.min.js"></script>
 <script src="assets/js/jquery.sliderPro.min.js"></script>
 
@@ -131,7 +133,7 @@
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="container">
                 <h3 style="margin-top: 4%;" class="h3">TITRE</h3>
-                <p class="mb-4"><span class="text-muted">2022 (?)</span></p>
+                <p class="mb-4"><span class="text-muted">Theme (?)</span></p>
                 <div class="mb-5">
                   <p>Texte accompagnateur</p>
 
@@ -150,7 +152,7 @@
       <div class="row">
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
-          <div class="credits">
+          <div style="position: relative;" class="credits">
             Médias Interactifs (UQÀM) - 2022
           </div>
         </div>
@@ -187,6 +189,7 @@
     arrows: true,
     fadeArrows: false,
     buttons: false,
+    autoplayDelay: 9999999,
   });
     </script>
 
@@ -195,7 +198,34 @@ function FullSkreen(){
     jQuery( '.sp-full-screen-button' ).trigger( 'click' );
 };
 </script>
+<script>
+ var activeimg = $('.sp-selected img').attr('src');
+ var body = document.getElementsByClassName('bg-image')[0];
+ body.style.backgroundImage = 'url('+activeimg+')';
 
+  </script>
+
+<script>
+
+
+var arrows = document.getElementsByClassName("sp-arrow");
+for (var i = 0 ; i < arrows.length; i++) {
+   arrows[i].addEventListener('click' , Switch , false ) ; 
+}
+
+function Switch(){
+  setTimeout(function(){
+  var activeimg = $('.sp-selected img').attr('src');
+  var body = document.getElementsByClassName('bg-image')[0];
+  
+ // body.style.backgroundImage = 'url('+activeimg+')'; -->
+
+  body.style.backgroundImage = 'url('+activeimg+')';
+
+},600)};
+
+   </script>
+   
 </body>
 
 </html>
