Quick fix and preview of ambient sound

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 return myaudio.paused ? myaudio.play() : myaudio.pause();
                 };
                 </script> -->
-            <audio id="audio_main" src="assets/sounds/skype.mp3" loop></audio>
+            <audio id="audio_main" src="assets/sounds/ambient.mp3" loop></audio>
         <div style="position: relative; text-align: center; margin-top: 30%;"id="enter">
             
             <p class="mb-0"><button class="enter" onclick="EnterSite();PlayMain()">Entrer</button></p>
