--- a/street.html
+++ b/street.html
@@ -33,7 +33,7 @@
 
 <body>
 
-  <div id="bg" class="bg-image"></div>
+  <div id="bg" class="bg-image" data-aos="fade-up"></div>
 
   <script src="assets/libs/jquery-1.11.0.min.js"></script>
 <script src="assets/js/jquery.sliderPro.min.js"></script>
@@ -55,22 +55,6 @@
 		</a>
     </div>
   </nav>
-<script>
-  $('img[data-enlargable]').addClass('img-enlargable').click(function(){
-    var src = $(this).attr('src');
-    $('<div>').css({
-        background: 'RGBA(0,0,0,.5) url('+src+') no-repeat center',
-        backgroundSize: 'contain',
-        width:'100%', height:'100%',
-        position:'fixed',
-        zIndex:'10000',
-        top:'0', left:'0',
-        cursor: 'zoom-out'
-    }).click(function(){
-        $(this).remove();
-    }).appendTo('body');
-});
-  </script>
 
   <main id="main">
 
@@ -175,7 +159,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
-  <audio loop="" autoplay="">
+  <audio autoplay="">
     <source src="assets/sounds/skype.mp3" type="audio/ogg">
   </audio>
 
@@ -218,8 +202,6 @@ function Switch(){
   var activeimg = $('.sp-selected img').attr('src');
   var body = document.getElementsByClassName('bg-image')[0];
   
- // body.style.backgroundImage = 'url('+activeimg+')'; -->
-
   body.style.backgroundImage = 'url('+activeimg+')';
 
 },600)};
