--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Hystérésis</title>
         <link rel="stylesheet" href="assets/css/style.css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <style type="text/css">
             body, html
 			
