--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
         <title>Hystérésis</title>
         <link rel="stylesheet" href="assets/css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
@@ -41,12 +42,12 @@
                 };
                 </script> -->
             <audio id="audio_main" src="assets/sounds/ambient.mp3" loop></audio>
-        <div style="position: relative; text-align: center; margin-top: 30%;"id="enter">
+        <div style="position: relative; text-align: center; top: 50%;"" id="enter">
             
             <p class="mb-0"><button class="enter" onclick="EnterSite();PlayMain()">Entrer</button></p>
                   </div>
 
-        <div id="content" style="display: none">
+        <div embed-responsive embed-responsive-16by9 id="content" style="display: none">
           <!-- <script>
 
                 $(document).ready(function() {
@@ -81,7 +82,7 @@ document.getElementById('speaker').addEventListener('click', function (e)
 }, false);
 
     </script>
-            <iframe width="100%" height="100%" frameborder="0" src="./iframe.html"></iframe>
+            <iframe height="100%" width="100%" frameborder="0" src="./iframe.html"></iframe>
 			
         </div>
 	
