--- a/iframe.html
+++ b/iframe.html
@@ -49,11 +49,12 @@ window.onload = function fadeOutEffect() {
     <div class="container">
       <a class="navbar-brand" href="iframe.html" style="font-family: Remboy; font-size: 40px; font-weight: bold;">HYSTERESIS</a>
 		<div class="container">
-	<h2 style="font-size: 13px;">Sous-titre</h2>
-        <span></span>
-	  <br>
+      <h2 id="intro" style="font-size: 14px">TXT INTRO <a style="text-decoration: underline; font-weight: bold;" href="about.html">Voir plus</a></h2>
+      <h2 id="cult" style="font-size: 14px">TXT CULT <a style="text-decoration: underline; font-weight: bold;" href="about.html">Voir plus</a></h2>
+      <h2 id="esp" style="font-size: 14px">TXT ESP <a style="text-decoration: underline; font-weight: bold;" href="about.html">Voir plus</a></h2>
+      <h2 id="med" style="font-size: 14px">TXT MED <a style="text-decoration: underline; font-weight: bold;" href="about.html">Voir plus</a></h2>
+      
     </div>
-	  <br>
     </div>
   </nav>
 
@@ -70,7 +71,6 @@ window.onload = function fadeOutEffect() {
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-			  <a class="mb-0" style="font-weight: bold; font-size: 20px; color: white; border-style: dotted; border-color: white; " href="about.html">Infos</a>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
 			  <div id="filters" class="filters">
@@ -82,10 +82,6 @@ window.onload = function fadeOutEffect() {
           </div>
         </div>
         <div data-aos="fade-up">
-        <p id="intro">TXT INTRO</p>
-        <p id="cult">TXT CULT</p>
-        <p id="esp">TXT ESP</p>
-        <p id="med">TXT MED</p>
         </div>
         <script>
 function intro() {
